--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,11 @@ h1 {
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 h3 {
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 100;
 }
 
@@ -104,14 +104,17 @@ header {
   grid-template-columns: repeat(auto-fit, 250px);
   grid-template-rows: repeat(250px);
   grid-gap: 20px;
-  grid-auto-flow: column;
+  width: 98vw;
+  height: auto;
 }
 
 .book-info {
   width: 250px;
   height: auto;
   margin: 30px;
+  padding: 10px;
   background-color: var(--lightblue);
+  border-radius: 10px;
 }
 
 /* modal */
