--- a/styles.css
+++ b/styles.css
@@ -36,12 +36,13 @@ img {
 }
 
 :root {
-  --bg-color: #1bb972;
-  --purple: #851bdc;
-  --orange: #ec601f;
-  --green: #48ae51;
-  --pink: #cd76ba;
-  --lightblue: #5085e1;
+  --darkblue: #1c77c3;
+  --orange: #f3923776;
+  --green: #18ad245d;
+  --red: #d35553;
+  --lightblue: #39a9db;
+  --verylightblue: #40bcd84e;
+  --lightgray: lightslategray;
 }
 
 h1 {
@@ -69,51 +70,79 @@ p {
   line-height: 1.5rem;
 }
 
-.color1 {
-  background-color: var(--purple);
-}
-
-.color2 {
-  background-color: var(--orange);
-}
-
-.color3 {
-  background-color: var(--green);
-}
-
-.color4 {
-  background-color: var(--pink);
-}
-
-.color5 {
-  background-color: var(--lightblue);
-}
-
 /* Header */
 header {
-  height: 200px;
+  height: 30vh;
   width: 100vw;
-  background-color: var(--orange);
+  background-color: var(--green);
   padding-top: 50px;
+  padding-left: 20px;
+}
+
+header p {
+  margin-top: 20px;
+  color: black;
+  font-size: large;
+  padding-left: 20px;
 }
 
 /* Main */
 
-.book-card {
+.bookCard {
   display: grid;
   grid-template-columns: repeat(auto-fit, 250px);
   grid-template-rows: repeat(250px);
-  grid-gap: 20px;
+  row-gap: 10px;
   width: 98vw;
-  height: auto;
+  height: 70vh;
+  margin-left: 20px;
 }
 
-.book-info {
-  width: 250px;
+.bookInfo {
+  width: 30vw;
+  max-width: 230px;
+  min-width: 200px;
   height: auto;
-  margin: 30px;
+  max-height: 300px;
+  margin: 10px;
   padding: 10px;
-  background-color: var(--lightblue);
+  background-color: var(--verylightblue);
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px rgb(0 0 0 / 0.3);
+}
+
+.btnContainer {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.showFormBtn {
+  padding: 20px;
+  border-radius: 10px;
+  background-color: var(--orange);
+  color: rgba(0, 0, 0, 0.663);
+  font-size: large;
+  font-weight: 600;
+  width: 50vw;
+}
+
+.btnDiv {
+  margin-top: 20px;
+}
+
+.changeStatus {
+  padding: 5px;
+  margin-bottom: 10px;
+  background-color: var(--lightgray);
+  color: white;
+  border-radius: 10px;
+}
+
+.removeBtn {
+  padding: 5px;
+  background-color: var(--lightgray);
+  color: white;
   border-radius: 10px;
 }
 
@@ -125,6 +154,7 @@ header {
   left: 0;
   top: 0;
   width: 100%;
+  min-width: 300px;
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
@@ -132,18 +162,23 @@ header {
 
 .formData {
   background-color: #fefefe;
-  margin: 15% auto;
+  margin: 20vh auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 30%;
+  min-width: 300px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: large;
+  row-gap: 10px;
 }
 
 .close {
   color: #aaa;
-  float: right;
-  font-size: 28px;
+  text-align: end;
+  font-size: 50px;
   font-weight: bold;
 }
 
@@ -152,4 +187,61 @@ header {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.submitBtn {
+  font-size: 20px;
+  padding: 10px;
+}
+
+footer {
+  background-color: #dddada;
+  padding: 20px;
+  width: 100vw;
+}
+
+.footerContainer {
+  display: flex;
+
+  padding-left: 2rem;
+}
+
+.footerContainer a {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  gap: 2rem;
+}
+
+@media (max-width: 550px) {
+  html {
+    min-width: 300px;
+  }
+
+  header {
+    height: 40vh;
+    min-width: 300px;
+  }
+
+  header p {
+    margin-right: 40px;
+  }
+
+  .bookCard {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    margin: 0;
+  }
+  .bookInfo {
+    width: 90vw;
+    max-width: 400px;
+    height: 25vh;
+    max-height: 300px;
+    margin: 0;
+  }
+
+  .showFormBtn {
+    width: 200px;
+  }
 }
