--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ img {
 :root {
   --darkblue: #1c77c3;
   --orange: #f3923776;
-  --green: #18ad245d;
+  --grey: #0312045d;
   --red: #d35553;
   --lightblue: #39a9db;
   --verylightblue: #40bcd84e;
@@ -86,9 +86,11 @@ section {
 header {
   height: 30vh;
   width: 100vw;
-  background-color: var(--green);
+  background-color: var(--grey);
   padding-top: 50px;
   padding-left: 20px;
+  box-shadow: 0px 5px 10px rgb(0 0 0 / 0.3);
+  margin-bottom: 20px;
 }
 
 header p {
@@ -100,7 +102,7 @@ header p {
 
 /* Main */
 
-.bookCard {
+.cardContainer {
   display: grid;
   grid-template-columns: repeat(auto-fit, 250px);
   grid-template-rows: repeat(250px);
@@ -110,7 +112,7 @@ header p {
   margin-left: 20px;
 }
 
-.bookInfo {
+.book {
   width: 30vw;
   max-width: 230px;
   min-width: 200px;
@@ -132,11 +134,16 @@ header p {
 .showFormBtn {
   padding: 20px;
   border-radius: 10px;
-  background-color: var(--orange);
+  background-color: white;
   color: rgba(0, 0, 0, 0.663);
   font-size: large;
   font-weight: 600;
   width: 50vw;
+  border: 1px solid #f39237;
+}
+
+.showFormBtn:hover{
+  background-color: #f39237;
 }
 
 .btnDiv {
@@ -149,6 +156,11 @@ header p {
   background-color: var(--lightgray);
   color: white;
   border-radius: 10px;
+  border: none;
+}
+
+.changeStatus:hover{
+  background-color: #18ad24;
 }
 
 .removeBtn {
@@ -156,6 +168,11 @@ header p {
   background-color: var(--lightgray);
   color: white;
   border-radius: 10px;
+  border: none;
+}
+
+.removeBtn:hover{
+  background-color: var(--red);
 }
 
 /* modal */
@@ -208,7 +225,7 @@ header p {
 
 /* footer */
 footer {
-  background-color: #dddada;
+  background-color: var(--grey);
   padding: 20px;
   width: 100vw;
   margin-top: 50px;
